tests/machine/x/go/outer_join.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/outer_join.go:43:43: cannot use func() []map[string]any {…}() (value of type []map[string]any) as []map[string]map[string]int value in variable declaration
../../../tests/machine/x/go/outer_join.go:92:11: cannot convert row["order"] (map index expression of type map[string]int) to type bool
../../../tests/machine/x/go/outer_join.go:93:12: cannot convert row["customer"] (map index expression of type map[string]int) to type bool

1: //go:build ignore
